css/gutentolerance.css
/* Hide the "Preview" button */
#editor.block-editor__container .editor-inserter-with-shortcuts, #editor.block-editor__container .editor-post-preview.is-button {
	display: none !important;
}

#editor.block-editor__container .components-panel__row label[for^="post-author-selector"] {
	color: transparent;
	display: inline-block;
}

/* convert "Author" label to "Posted By" */
#editor.block-editor__container .components-panel__row label[for^="post-author-selector"]&:before {
	position: relative;
	left: 0;
	color: #555d66;
	content: "Posted By";
}

/* add "Add Block" label to (+) icon */
#editor.block-editor__container .editor-block-list__empty-block-inserter .editor-inserter:before,  #editor.block-editor__container .editor-default-block-appender .editor-inserter:before, #editor.block-editor__container .editor-inserter-with-shortcuts .editor-inserter:before {
		content: "Add Block";
		display: inline-block;
		position: absolute;
		left: -3px;
		bottom: -2.7em;
		text-align: center;
}

/* Outline and label the Page/Post Title field */
#editor.block-editor__container .edit-post-visual-editor .editor-post-title__block > div {
	outline: 1px solid rgba(145, 151, 162, 0.2);
}
#editor.block-editor__container .edit-post-visual-editor .editor-post-title__block > div:before {
	/* position: absolute;
	top: 4px;
	right: -1px;
	color: #fff;
	background-color: rgba(145, 151, 162, 1);
	font-size: 11px;
	font-family: sans-serif;
	font-weight: normal;
	content: "Title";
	box-sizing: border-box;
	padding: 0 0.5em;
	letter-spacing: 0.08em;
	z-index: 0; */

	content: "Title";
	color: #767676;
	position:absolute;
	top:2em;
	left: -7.25rem;
	width: 5rem;
	text-align: right;
	font-size:0.67rem;
	font-family:sans-serif;
	opacity:0.67;
}
#editor.block-editor__container .edit-post-visual-editor .editor-post-title__block > div {
	outline: 1px solid rgba(145, 151, 162, 0.2);
}
.post-type-wp_block #editor.block-editor__container .edit-post-visual-editor .editor-post-title__block > div:before {
	content: "Block title";
}
.post-type-page #editor.block-editor__container .edit-post-visual-editor .editor-post-title__block > div:before {
	content: "Page title";
}
.post-type-post #editor.block-editor__container .edit-post-visual-editor .editor-post-title__block > div:before {
	content: "Post title";
}
#editor.block-editor__container .edit-post-visual-editor .editor-post-title__block > div.editor-post-permalink button:after {
	content: "Permalink";
	margin-left: 0.5em;
}
#editor.block-editor__container .edit-post-visual-editor .editor-post-title__block > div.editor-post-permalink:before {
	content: "";
}

/* Label the content area */
#editor.block-editor__container .editor-block-list__layout {
	margin: 1.5em 0;
	border-top: 1px dashed #e5e5e5;
	border-bottom: 1px dashed #e5e5e5;
}
#editor.block-editor__container .editor-block-list__layout:after, #editor.block-editor__container .editor-block-list__layout:before {
	content: "content";
	position: relative;
	bottom: 0;
	right: 0;
	font-family: sans-serif;
	font-size: 0.7em;
	color: #767676;
}
.block-editor-page #editor.block-editor__container .editor-block-list__layout:after {
	content: "page content above here";
}
.block-editor-page #editor.block-editor__container .editor-block-list__layout:before {
	content: "page content below here";
}
.block-editor-post #editor.block-editor__container .editor-block-list__layout:after {
	content: "post content above here";
}
.block-editor-post #editor.block-editor__container .editor-block-list__layout:before {
	content: "post content below here";
}
#editor.block-editor__container .editor-inner-blocks .editor-block-list__layout {
	border: none;
	margin: 0;
}
#editor.block-editor__container .editor-inner-blocks .editor-block-list__layout:after, #editor.block-editor__container .editor-inner-blocks .editor-block-list__layout:before {
	content: '';
}

/* Add a visible outline to blocks at all times */
#editor.block-editor__container .editor-block-list__layout .editor-block-list__block .editor-block-list__block-edit:before {
	outline-color: rgba(145, 151, 162, 0.15);
}

/* Improve label on Publish/Update/Save button */
#editor.block-editor__container .components-button.editor-post-publish-panel__toggle.is-button:after, #editor.block-editor__container .editor-post-publish-button.is-button:after {
	content: "/Save Edits";
}


/* Clarify the "Document" label on the right-column tab in the Admin UI */
.block-editor-page .edit-post-sidebar__panel-tab[data-label="Document"]:before {
	content: "Page/";
}

.block-editor-post .edit-post-sidebar__panel-tab[data-label="Document"]:before {
	content: "Post/";
}

/* Label the toolbar actions */
.editor-inserter__toggle:after {
	content:"Add Block";
	margin-left:0.33em;
}
.editor-history__undo:after {
	content:"Undo";
	margin-left:0.33em;
}
.editor-history__redo:after {
	content:"Redo";
	margin-left:0.33em;
}
.editor-history__redo:after {
	content:"Redo";
	margin-left:0.33em;
}
.table-of-contents .components-icon-button:after {
	content:"Stats";
	margin-left:0.33em;
}
.table-of-contents .components-icon-button:after {
	content:"Stats";
	margin-left:0.33em;
}
.block-editor-block-navigation:after {
	content:"Structure";
	margin-left:0.33em;
}

/* Visible labels for blocks */
.editor-block-list__block:after {
	content: "Custom Block";
	color:#767676;
	position:absolute;
	top:0;
	left: -6.25rem;
	width: 3.5rem;
	text-align: right;
	font-size:0.67rem;
	font-family:sans-serif;
	opacity:0.67;
	line-height: 1.2;
}
.editor-block-list__block[data-type="core/paragraph"]:after {
	content:"Paragraph Block";
}
.editor-block-list__block[data-type="core/quote"]:after {
	content:"Quote Block";
}
.editor-block-list__block[data-type="core/image"]:after {
	content:"Image Block";
}
.editor-block-list__block[data-type="core/heading"]:after {
	content:"Heading Block";
}
.editor-block-list__block[data-type="core/gallery"]:after {
	content:"Gallery Block";
}
.editor-block-list__block[data-type="core/list"]:after {
	content:"List Block";
}
.editor-block-list__block[data-type="core/audio"]:after {
	content:"Audio Block";
}
.editor-block-list__block[data-type="core/cover"]:after {
	content:"Cover Block";
}
.editor-block-list__block[data-type="core/file"]:after {
	content:"File Block";
}
.editor-block-list__block[data-type="core/video"]:after {
	content:"Video Block";
}
.editor-block-list__block[data-type="core/code"]:after {
	content:"Code Block";
}
.editor-block-list__block[data-type="core/freeform"]:after {
	content:"Classic Block";
}
.editor-block-list__block[data-type="core/html"]:after {
	content:"Custom HTML Block";
}
.editor-block-list__block[data-type="core/preformatted"]:after {
	content:"Preformatted Block";
}
.editor-block-list__block[data-type="core/pullquote"]:after {
	content:"Pullquote Block";
}
.editor-block-list__block[data-type="core/table"]:after {
	content:"Table Block";
}
.editor-block-list__block[data-type="core/verse"]:after {
	content:"Verse Block";
}
.editor-block-list__block[data-type="core/button"]:after {
	content:"Button Block";
}
.editor-block-list__block[data-type="core/columns"]:after {
	content:"Columns Block";
}
.editor-block-list__block[data-type="core/media-text"]:after {
	content:"Media & Text Block";
}
.editor-block-list__block[data-type="core/more"]:after {
	content:"More Block";
}
.editor-block-list__block[data-type="core/page-break"]:after {
	content:"Page Break Block";
}
.editor-block-list__block[data-type="core/spacer"]:after {
	content:"Spacer Block";
}
.editor-block-list__block[data-type="core/shortcode"]:after {
	content:"Shortcode Block";
}
.editor-block-list__block[data-type="core/archives"]:after {
	content:"Archives Block";
}
.editor-block-list__block[data-type="core/calendar"]:after {
	content:"Calendar Block";
}
.editor-block-list__block[data-type="core/categories"]:after {
	content:"Categories Block";
}
.editor-block-list__block[data-type="core/latest-comments"]:after {
	content:"Latest Comments Block";
}
.editor-block-list__block[data-type="core/latest-posts"]:after {
	content:"Latest Posts Block";
}
.editor-block-list__block[data-type="core/rss"]:after {
	content:"RSS Block";
}
.editor-block-list__block[data-type="core/search"]:after {
	content:"Search Block";
}
.editor-block-list__block[data-type="core/tag-cloud"]:after {
	content:"Tag Cloud Block";
}
.editor-block-list__block[data-type="core/separator"]:after {
	content:"Separator Block";
}
.editor-block-list__block[data-type="core/group"]:after {
	content:"Group Block";
}
.editor-block-list__block[data-type="core/nextpage"]:after {
	content:"Page Break Block";
}
.editor-block-list__block[data-type="core/embed"]:after {
	content:"Embed Block";
}
.editor-block-list__block[data-type="core-embed/twitter"]:after {
	content:"Twitter Block";
}
.editor-block-list__block[data-type="core-embed/youtube"]:after {
	content:"YouTube Block";
}
.editor-block-list__block[data-type="core-embed/facebook"]:after {
	content:"Facebook Block";
}
.editor-block-list__block[data-type="core-embed/instagram"]:after {
	content:"Instagram Block";
}
.editor-block-list__block[data-type="core-embed/wordpress"]:after {
	content:"WordPress Block";
}
.editor-block-list__block[data-type="core-embed/soundcloud"]:after {
	content:"Soundcloud Block";
}
.editor-block-list__block[data-type="core-embed/spotify"]:after {
	content:"Spotify Block";
}
.editor-block-list__block[data-type="core-embed/flickr"]:after {
	content:"Flickr Block";
}
.editor-block-list__block[data-type="core-embed/vimeo"]:after {
	content:"Vimeo Block";
}
.editor-block-list__block[data-type="core-embed/animoto"]:after {
	content:"Animoto Block";
}
.editor-block-list__block[data-type="core-embed/cloudup"]:after {
	content:"CloudUp Block";
}
.editor-block-list__block[data-type="core-embed/collegehumor"]:after {
	content:"CollegeHumor Block";
}
.editor-block-list__block[data-type="core-embed/imgur"]:after {
	content:"Imgur Block";
}
.editor-block-list__block[data-type="core-embed/issuu"]:after {
	content:"Issuu Block";
}
.editor-block-list__block[data-type="core-embed/hulu"]:after {
	content:"Hulu Block";
}
.editor-block-list__block[data-type="core-embed/kickstarter"]:after {
	content:"Kickstarter Block";
}
.editor-block-list__block[data-type="core-embed/meetup-com"]:after {
	content:"Meetup.com Block";
}
.editor-block-list__block[data-type="core-embed/mixcloud"]:after {
	content:"Mixcloud Block";
}
.editor-block-list__block[data-type="core-embed/reddit"]:after {
	content:"Reddit Block";
}
.editor-block-list__block[data-type="core-embed/reverbnation"]:after {
	content:"ReverbNation Block";
}
.editor-block-list__block[data-type="core-embed/screencast"]:after {
	content:"Screencast Block";
}
.editor-block-list__block[data-type="core-embed/scribd"]:after {
	content:"Scribd Block";
}
.editor-block-list__block[data-type="core-embed/slideshare"]:after {
	content:"Slideshare Block";
}
.editor-block-list__block[data-type="core-embed/smugmug"]:after {
	content:"SmugMug Block";
}
.editor-block-list__block[data-type="core-embed/speaker-deck"]:after {
	content:"Speaker Deck Block";
}
.editor-block-list__block[data-type="core-embed/ted"]:after {
	content:"TED Block";
}
.editor-block-list__block[data-type="core-embed/tumblr"]:after {
	content:"Tunblr Block";
}
.editor-block-list__block[data-type="core-embed/videopress"]:after {
	content:"VideoPress Block";
}
.editor-block-list__block[data-type="core-embed/wordpress-tv"]:after {
	content:"WordPress.tv Block";
}
.editor-block-list__block[data-type="core-embed/amazon-kindle"]:after {
	content:"Amazon Kindle Block";
}
.editor-block-list__block[data-type="core-embed/crowdsignal"]:after {
	content:"Crowdsignal Block";
}
.editor-block-list__block[data-type="core-embed/dailymotion"]:after {
	content:"Crowdsignal Block";
}

